--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
   },
 
   "scripts": {
-    "start": "nodemon --exec babel-node -- ./server.js",
-    "build": "babel ./server.js --out-file server-compiled.js",
+    "start": "nodemon --exec babel-node -- ./index.js",
+    "build": "babel ./index.js --out-file server-compiled.js",
     "serve": "node server-compiled.js"
   }
   
